[package]
name = "micro-pitch"
version = "0.1.0"
authors = ["Jonthan Whittle <jonathan.m.whittle@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
embedded-hal = "0.2"
microbit-v2 = "0.13"
defmt = "0.3"
defmt-rtt = "0.3"
nb = "1.0.0"


[profile.release]
codegen-units = 1
debug = true
lto = true
